[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/bin/01/01.rs"

[[bin]]
name = "02"
path = "src/bin/02/02.rs"

[[bin]]
name = "03"
path = "src/bin/03/03.rs"

[[bin]]
name = "04"
path = "src/bin/04/04.rs"

[[bin]]
name = "05"
path = "src/bin/05/05.rs"

[dependencies]
